# My_kanban2

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  data.json  docker-compose-demo.yml  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: check.yml
my_kanban2/: asgi.py  settings.py  urls.py  wsgi.py
my_kanban2/templates/includes/: common_head.html
nginx/: default.conf
nginx/ssl/: crt.crt  key.key
redis_db/: __init__.py  demo.sh  entrypoint.sh
thisapp/: decorators.py  forms.py  http_handlers.py  models.py  tests.py  urls.py  utils.py  validators.py  views.py
thisapp/migrations/: 0001_initial.py  0002_invitation_and_more.py  0003_card.py  0004_comment.py  0005_alter_card_status_delete_invitation.py
thisapp/static/css/: style.css
thisapp/templates/: board.html  index.html  profile.html
thisapp/templates/card/: base.html  create.html  view.html
thisapp/templates/http_status_codes/: 400.html  403.html  404.html  405.html  base.html
thisapp/templates/includes/: common_head.html
user/: OAuth2.py  auth_email.py  forms.py  models.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_customuser_group_customuser_last_login_and_more.py
user/static/user/css/: user.css
user/templates/auth/: base.html  login.html  register.html
user/templates/user/: password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html
(+7 files in other folders)
