[tool.poetry]
name = "my-kanban2"
version = "0.1.0"
description = ""
authors = ["Mas5ive <empty>"]
readme = "README.md"
packages = [{include = "my_kanban2"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.16"
django-debug-toolbar = "4.2.0"
social-auth-app-django = "^5.4.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
redis = {extras = ["hiredis"], version = "^5.0.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
