[project]
name = "my-kanban2"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "Mas5ive", email = "empty"},
]
requires-python = "==3.10.12"
dependencies = [
    "django<5.0.0,>=4.2.0",
    "django-debug-toolbar==4.2.0",
    "social-auth-app-django<6.0.0,>=5.4.1",
    "gunicorn<24.0.0,>=23.0.0",
    "psycopg2-binary<3.0.0,>=2.9.9",
    "redis[hiredis]<6.0.0,>=5.0.8",
]
